# systemd

./: .packit.yml  meson.build  meson_options.txt
.github/workflows/: cifuzz.yml  gather-pr-metadata.yml  issue_labeler.yml  mkosi.yml
hwdb.d/: 60-keyboard.hwdb
man/: org.freedesktop.systemd1.xml  portablectl.xml  repart.d.xml  resolved.conf.xml  systemctl.xml  systemd-mount.xml  systemd-run.xml  systemd-stub.xml  systemd-system.conf.xml  systemd-sysupdate.xml  systemd.exec.xml  systemd.netdev.xml  sysupdate.d.xml
man/rules/: meson.build
mkosi.images/app-reload/: mkosi.conf
mkosi.images/app1/: mkosi.conf
mkosi.images/conf0/: mkosi.conf
mkosi.images/system/: mkosi.conf  mkosi.finalize
src/basic/: fd-util.c  glyph-util.c  glyph-util.h  process-util.c  time-util.c  time-util.h
src/boot/: bootctl-install.c  bootctl-status.c  bootctl.c
src/core/: dbus-manager.c  exec-invoke.c  execute.c  execute.h  load-fragment.c  main.c  manager.c  manager.h  mount.c  selinux-access.c  service.c  timer.c  unit.c  unit.h
src/cryptenroll/: cryptenroll.c
src/home/: homed-home.c  homed-manager.c
src/hostname/: hostnamed.c
src/journal/: bsod.c  journald-server.c
src/libsystemd-network/: sd-radv.c
src/locale/: localed.c
src/login/: logind-action.c
src/mount/: mount-tool.c
src/network/: meson.build  networkd-link.c  networkd-link.h  networkd-network-gperf.gperf  networkd-network.h  networkd-queue.c  (+3 more)
test/: integration-test-wrapper.py  integration_test_wrapper.py  meson.build  test-functions
test/TEST-06-SELINUX/: meson.build
units/: meson.build
(+56 files in other folders)
